[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
rust-crypto = "0.2.36"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
itertools = "0.10.5"
nom = "7.1.1"
multiset = "0.0.5"
multimap = "0.8.3"
num = "0.4.0"
